# blackmagic-esp32-s2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig
.github/workflows/: build.yml  reindex.yml
components/blackmagic/: CMakeLists.txt
components/blackmagic/blackmagic-fw/libopencm3/include/libopencm3/sam/: pmc.h
components/blackmagic/blackmagic-fw/libopencm3/include/libopencm3/stm32/: rng.h  rtc.h
components/blackmagic/blackmagic-fw/libopencm3/include/libopencm3/stm32/f3/: spi.h
components/blackmagic/esp32-platform/: gdb-glue.c  gdb-glue.h  platform-esp32-s2.h  platform.c  platform.h  version.h
components/blackmagic/esp32-platform/custom/: swd-spi-tap.c
components/dap-link/: CMakeLists.txt  dap_config.h
components/dotstar/: CMakeLists.txt  LICENSE  README.md  component.mk
components/dotstar/include/: dotstar.h
components/dotstar/src/: dotstar.c
components/mlib/: CMakeLists.txt  m-string.c  m-string.h  m_string.c  m_string.h
components/simple-uart/: CMakeLists.txt  simple-uart.c  simple-uart.h
components/simple_uart/: simple-uart.c  simple-uart.h
components/soft-uart/: CMakeLists.txt  soft-uart.c  soft-uart.h
components/svelte-portal/: .gitignore  CMakeLists.txt  package-lock.json  package.json  rollup.config.js  svelte-portal.h
components/svelte-portal/public/: index.html
components/svelte-portal/src/: App.svelte  Button.svelte  ButtonInline.svelte  Input.svelte  Select.svelte  Spinner.svelte
components/svelte-portal/src/lib/: Api.svelte  ButtonInline.svelte  Grid.svelte  Indicator.svelte  Input.svelte  Popup.svelte  Reload.svelte  Select.svelte  SpinnerBig.svelte  UartTerminal.svelte  Value.svelte  WebSocket.svelte  terminal.js
components/svelte-portal/src/tabs/: TabPS.svelte  TabSys.svelte  TabWiFi.svelte
components/tinyusb/: CMakeLists.txt
components/tinyusb/config/: tusb_config.h
components/tinyusb/drivers/: driver-glue.c  usb-glue.c  usb-glue.h
components/tinyusb/drivers/dap-link/: dap-link-descriptors.c  dap-link-descriptors.h  vendor_device.c
components/tinyusb/drivers/dual-cdc/: dual-cdc-descriptors.c  dual-cdc-descriptors.h
components/tinyusb/dual-cdc/: dual-cdc-driver.c  dual-cdc-driver.h  usb_descriptors.c
components/usbglue/: CMakeLists.txt  idf_component.yml
components/usbglue/config/: tusb_config.h
components/usbglue/drivers/: usb-glue.c  usb-glue.h
components/usbglue/drivers/dap-link/: vendor_device.h
components/usbglue/drivers/dual-cdc/: dual-cdc-descriptors.h
main/: CMakeLists.txt  blackmagick.c  cli-args.c  cli-args.h  cli-command-device-info.c  cli-command-gpio.c  cli-commands-config.c  cli-commands-device-info.c  cli-commands-gpio.c  cli-commands-wifi.c  cli-commands.c  cli-commands.h  cli-uart.c  cli-uart.h  cli.c  cli.h  delay.c  delay.h  factory-reset-service.c  factory-reset-service.h  helpers.h  i2c.c  i2c.h  idf_component.yml  led-dotstar.c  led-dotstar.h  led.c  led.h  main.c  network-gdb.c  network-gdb.h  network-http.c  network-http.h  network-uart.c  network-uart.h  network.c  network.h  nvs-config.c  nvs-config.h  nvs.c  (+15 more)
main/cli/: cli-commands-config.c  cli-commands-device-info.c  cli-commands-gpio.c  cli-commands-wifi.c  cli-commands.c  cli.c  cli.h  cli.motd.art
scripts/: flash_nix.sh  pack_release_win.bat
